# mousercv

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  HANDOFF.md  README.md  cloudbuild.yaml  docker-compose.yml
.github/workflows/: docker-publish.yml
annotations/: README.md
backend/: pyproject.toml
backend/app/: CLAUDE.md  db.py  main.py  models.py  schemas.py
backend/app/routers/: CLAUDE.md  analytics.py  annotations.py  projects.py  sync.py  tracks.py  videos.py
backend/app/services/: CLAUDE.md  behavior.py  feature_extractor.py  gcs.py  mock_detector.py  reidentifier.py  state_machine.py  sync.py  temporal_smoother.py  video_processor.py
backend/src/: CLAUDE.md
backend/src/admin/: CLAUDE.md
backend/src/knowledge/: CLAUDE.md
backend/src/prompts/: CLAUDE.md
backend/src/prompts/versions/: CLAUDE.md
backend/src/skills/: CLAUDE.md
backend/src/skills/batch_detective/: CLAUDE.md
backend/src/skills/solubility_profile/demo/: CLAUDE.md
backend/src/solubility/: CLAUDE.md
backend/src/tools/: CLAUDE.md
backend/src/utils/: CLAUDE.md
backend/tests/: CLAUDE.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/shared/: CLAUDE.md
frontend/src/: App.tsx  CLAUDE.md  index.css
graphrag/: CLAUDE.md
graphrag/config/: CLAUDE.md
nginx/: frontend.conf
notebooks/: 01_evaluate_sam3.ipynb  02_evaluate_superanimal.ipynb  03_process_video.ipynb  04_import_export.ipynb  05_frame_slicer.ipynb  06_keypoint_evaluation.ipynb  07_silhouette_analysis.ipynb  08_dlc_topdown_colab.ipynb  08_dlc_topdown_colab_README.md  08_dlc_topdown_colab_TEST.md  CLAUDE.md  pyproject.toml
notebooks/.ipynb_checkpoints/: 06_keypoint_evaluation-checkpoint.ipynb
scripts/: deploy.sh  fetch_lightning_results.py  pyproject.toml  render_annotations.py  sam3_silhouette.py  sam3_silhouette_local.py  setup-gcp.sh  setup_sam3_colab.sh
slides/: CLAUDE.md  MouserCV-status-2026-05-02.pptx  build_slides.js
(+78 files in other folders)
