[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.2",
    "google-cloud-storage>=3.10.1",
    "numpy>=2.4.3",
    "opencv-python-headless>=4.13.0.92",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.42.0",
]
