[project]
name = "mousercv-scripts"
version = "0.1.0"
description = "MouserCV scripts — native SAM3 silhouette analysis"
requires-python = ">=3.12,<3.13"
dependencies = [
    # PyTorch — arm64 includes MPS; CUDA on Colab
    "torch>=2.4",
    "torchvision>=0.19",

    # Native Facebook SAM3 — video predictor with identity tracking
    "sam3 @ git+https://github.com/facebookresearch/sam3.git",

    # Model download
    "huggingface_hub>=0.20",

    # Video / image
    "opencv-python-headless>=4.10",
    "numpy>=1.24",
    "Pillow>=10.4",
]

[tool.uv]
prerelease = "allow"
